Java21化 #4